--- a/README
+++ b/README
@@ -2,3 +2,7 @@
 A quick multi-user drawing demo based on orbit-db example https://github.com/orbitdb/orbit-db/blob/main/examples/browser/browser.html.
 
 You can create a new database in one browser session. Save that database id string, open it on a different browser/computer, and draw something together in real-time.
+
+## Notes
+It looks like current ipfs-js implementation is still using a relay to route traffic between peers.
+Tracking https://github.com/libp2p/js-libp2p/issues/385 to see if peers can drop webstar after initial connection and upgrade to true p2p.
